version 0.8 - XX-Jul-2009
 . Actions: Repeat repeats OK (issue #424)
 . CocosDenshion: fixed clicking on looped waves sounds (issue #440)
 . CocosLive: using the deprecated CString API (issue #441)
 . CocosLive: send-score object can be reused (issue #417)
 . CocosNode: children is an explicit "property" (issue #411)
 . ColorLayer: uses floats instead of ints for its size (issue #339)
 . ColorLayer: updates contentSize when when size is used (issue #443)
 . Menu: MenuItems works with anchorPoint correctly (issue #412)
 . Menu: ItemLabel disabled color is configurable. color is saved (issue #366)
 . Particle: VBO update only the needed particles (issue #367)
 . TextureMgr: new (and recommended) way to add CGImages (issue #349)
 . TouchDispatcher: retains/releases the delegates (issue #422)
 . Transitions: Fixed artifacts in Slide transitions (issue #442)
 
version 0.8-rc - 13-Jul-2009
 . ActionManager: actions logic were removed from CocosNode (issue #437)
 . Actions/Scheduler: the 1st time a Timer or Action is fired, is with dt=0 (issue #429)
 . Actions: CallFuncND doesn't leak if reused (issue #336)
 . AtlasSpriteManager: fixed blend function (part of issue #125)
 . AtlasSprite: render in subpixel by default (issue #414, issue #399)
 . BitmapFontAtlas: opacity and color are applied (issue #425)
 . BitmapFontAtlas: cache the configuration. FASTER loading times (issue #382)
 . CocosDenshion: improvements (issues #415, #431, #432, #433)
 . CocosNode: RGBA protocol setColor new API (issue #273)
 . CocosNode: removeAllChildren unschedules the timers correctly (issue #435)
 . Director: added isPaused property (issue #375)
 . Director: fixed memory leak in FPSLabel (issue #370)
 . Layer: possibility to hook / unkook touches/Accelerometer in runtime (issue #164)
 . ParallaxNode: uses world coordinates (issue #373)
 . Particles: support for auto-remove-on-finish (issue #385)
 . Scheduler: it's possible to scale the time (issue #236)